syntax = "proto3";

message NodeDetail {
  string public_key = 1;
  string master_public_key = 2;
  string node_name = 3;
  string role = 4;
  double max_ial = 5;
  double max_aal = 6;
  MQ mq = 7;
  bool active = 8;
}
  
message MQ {
  string ip = 1;
  int64 port = 2;
}

message IdPList {
  repeated string node_id = 1;
}

message NamespaceList {
  repeated Namespace namespaces = 1;
}

message Namespace {
  string namespace = 1;
  string description = 2;
  bool active = 3;
}

message ServiceDetailList {
  repeated ServiceDetail services = 1;
}

message ServiceDetail {
  string service_id = 1;
  string service_name = 2;
  bool active = 3;
}

message ApproveService {
  bool active = 1;
}

message TimeOutBlockRegisterMsqDestination {
  int64 time_out_block = 1;
}

message Proxy {
  string proxy_node_id = 1;
  string config = 2;
}

message BehindNodeList {
  repeated string nodes = 1;
}

message Request {
  string request_id = 1;
  int64 min_idp = 2;
  float min_aal = 3;
  float min_ial = 4;
  int64 request_timeout = 5;
  repeated DataRequest data_request_list = 6;
  string request_message_hash = 7;
  repeated Response response_list = 8;
  bool closed = 9;
  bool timed_out = 10;
  bool can_add_accessor = 11;
  string owner = 12;
  int64 mode = 13;
}

message DataRequest {
  string service_id = 1;
  repeated string as_id_list = 2;
  int64 min_as = 3;
  string request_params_hash = 4;
  repeated string answered_as_id_list = 5;
  repeated string received_data_from_list = 6;
}

message Response {
  float ial = 1;
  float aal = 2;
  string status = 3;
  string signature = 4;
  string identity_proof = 5;
  string private_proof_hash = 6;
  string idp_id = 7;
  string valid_proof = 8;
  string valid_ial = 9;
  string valid_signature = 10;
}